# exosuit

./: CMakeLists.txt  Experiment raw data 2.xlsx  Experiment_raw_data.txt  Experiment_raw_data.xlsx  Experiment_raw_data2.txt  Neural Network results.xlsx  README.md  build.sh  exosuit.copy  exosuit2.copy  exosuit_ext.cpp  exosuit_force.final  matrix_io.cpp  matrix_io.h  model.prototxt  results.txt  results_ext.txt  solver.prototxt
Installation_Instructions/: README.txt  build.sh
snapshots/: exosuit_iter_100000.caffemodel  exosuit_iter_100000.solverstate  exosuit_iter_200000.caffemodel  exosuit_iter_200000.solverstate  exosuit_iter_300000.solverstate  exosuit_iter_400000.solverstate  exosuit_iter_500000.caffemodel  exosuit_iter_500000.solverstate
